--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,10 +2,8 @@
 // README at: https://github.com/devcontainers-community/templates/tree/main/src/jupyter-datascience-notebooks
 {
     "name": "Jupyter Data Science Notebooks",
-    "image": "ghcr.io/hes-xplain/docker-notebook-base:latest",
-//    "build": {
-//        "dockerfile": "../Dockerfile"
-//    },
+//    "image": "ghcr.io/hes-xplain/docker-notebook-base:latest",
+    "build": { "dockerfile": "Dockerfile" },
     // Features to add to the dev container. More info: https://containers.dev/features.
 //    "features": {
 //        "ghcr.io/devcontainers/features/common-utils:2": {
