--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,7 @@
 {
     "name": "Jupyter Data Science Notebooks",
 //    "image": "ghcr.io/hes-xplain/docker-notebook-base:latest",
-    "build": { "dockerfile": "Dockerfile" },
+    "build": { "dockerfile": "../Dockerfile" },
     // Features to add to the dev container. More info: https://containers.dev/features.
 //    "features": {
 //        "ghcr.io/devcontainers/features/common-utils:2": {
