--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -43,7 +43,7 @@
         }
     },
     // Use 'postCreateCommand' to run commands after the container is created.
-    "postCreateCommand": "mkdir -p models/saved_models && curl -OL https://huggingface.co/HES-XPLAIN/sport_classification/resolve/main/FineTunedEfficientNet_30epochs.pth -o models/saved_models/FineTunedEfficientNet_30epochs.pth && curl -OL https://huggingface.co/HES-XPLAIN/sport_classification/resolve/main/VGGFineTuned.pth -o models/saved_models/VGGFineTuned.pth",
+    "postCreateCommand": "mkdir -p models/saved_models && cd models/saved_models && curl -OL https://huggingface.co/HES-XPLAIN/sport_classification/resolve/main/FineTunedEfficientNet_30epochs.pth -o FineTunedEfficientNet_30epochs.pth && curl -OL https://huggingface.co/HES-XPLAIN/sport_classification/resolve/main/VGGFineTuned.pth -o VGGFineTuned.pth",
 
     // Configure tool-specific properties.
     // "customizations": {},
